--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Bilal Olakunle Kareem - Cyber Security Analyst
 description: >
   Actively pursuing a position as a Cyber Security analyst, aiming to deploy my advanced technical competencies and extensive experience to fortify organizational security infrastructure.
 baseurl: ""
-url: "https://yourusername.github.io/test.io"
+url: "https://github.com/CrescentTech29/technix.io"
 theme: jekyll-theme-slate
 
 # Build settings
